--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -2,6 +2,12 @@ ja:
   activerecord:
     attributes:
       user:
+        nickname: ニックネーム
+        first_name: 名前
+        last_name: 苗字
+        first_name_kana: 名前(カナ)
+        last_name_kana: 苗字(カナ)
+        birthday: 生年月日
         confirmation_sent_at: パスワード確認送信時刻
         confirmation_token: パスワード確認用トークン
         confirmed_at: パスワード確認時刻
