--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,11 @@
           restrict_dependent_destroy:
             has_one: "%{record}が存在しているので削除できません"
             has_many: "%{record}が存在しているので削除できません"
+        models:
+          user:
+            attributes:
+              email:
+                invalid_email: "は~@~.~の形で入力してください"
     date:
       abbr_day_names:
       - 日
